[package]
name = "sysmlv2_web_editor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
console_error_panic_hook = "0.1"
# Add the SysML v2 parser dependency (using current version v0.32)
sysml-v2-parser = "0.32"

[dependencies.tower-lsp]
version = "0.20"
default-features = false
features = ["runtime-agnostic"]
